<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/editGarden"
            android:icon="@drawable/icon_edit_garden"
            android:title="@string/edit_my_garden"/>-->
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/icon_dashboard"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/myIssues"
            android:icon="@drawable/icon_my_issue"
            android:title="@string/my_issues"/>
        <item
            android:id="@+id/serviceRequests"
            android:icon="@drawable/icon_service_request"
            android:title="@string/service_requests"/>
        <item
            android:id="@+id/shopNow"
            android:icon="@drawable/icon_edit_garden"
            android:title="@string/shop_now"/>

    </group>
</menu>